small changes were made
